feat: Add more nodes to base_node_list.yml

--- a/assets/base_node_list.yml
+++ b/assets/base_node_list.yml
@@ -3,3 +3,12 @@
   is_default: true
   useSSL: true
   isEnabledForAutoSwitching: true
+-
+  uri: base.llamarpc.com
+  useSSL: true
+-
+  uri: base-rpc.publicnode.com
+  useSSL: true
+-
+  uri: 1rpc.io/base
+  useSSL: true
