--- a/pubspec_base.yaml
+++ b/pubspec_base.yaml
@@ -119,6 +119,7 @@ dependencies:
   trezor_connect:
     git:
       url: https://github.com/cake-tech/trezor_connect
+      ref: 59b3ceec158d3393b20d0c596cab2abcc62ac8e4
   bitbox_flutter:
     path: ./scripts/bitbox_flutter
   hashlib: 1.19.2
