feat: Add arbitrum related secrets to workflow

--- a/.github/workflows/no_restricted_imports.yaml
+++ b/.github/workflows/no_restricted_imports.yaml
@@ -21,6 +21,7 @@ jobs:
             "cw_nano"
             "cw_polygon"
             "cw_base"
+            "cw_arbitrum"
             "cw_solana"
             "cw_tron"
             "cw_wownero"
