feat: Integrate Arbitrum support across various configurations and files
- Updated cakewallet.bat to include Arbitrum in app configuration.
- Added Arbitrum node list to pubspec_base.yaml.
- Modified Android, iOS, Linux, and macOS app configuration scripts to support Arbitrum.
- Introduced Arbitrum output path and generation logic in configure.dart.
- Enhanced wallet type and pubspec generation to include Arbitrum.
- Added Arbitrum-related secrets in secret_key.dart.

--- a/.gitignore
+++ b/.gitignore
@@ -142,6 +142,7 @@ lib/zano/zano.dart
 lib/decred/decred.dart
 lib/dogecoin/dogecoin.dart
 lib/base/base.dart
+lib/arbitrum/arbitrum.dart
 
 ios/Runner/Assets.xcassets/AppIcon.appiconset/AppIcon@2x.png
 ios/Runner/Assets.xcassets/AppIcon.appiconset/AppIcon@2x~ipad.png
