--- a/.github/workflows/automated_integration_test.yml
+++ b/.github/workflows/automated_integration_test.yml
@@ -256,7 +256,7 @@ jobs:
           echo MWEBD_HASH=$MWEBD_HASH >> /etc/environment
           pushd scripts/android
             gomobile init;
-            ./build_mwebd.sh --dont-install
+            ./build_mwebd.sh
           popd
 
       - name: Build Decred
