feat: bip39 zano (wip)

--- a/cw_zano/pubspec.yaml
+++ b/cw_zano/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
       url: https://github.com/mrcyjanek/monero_c
       ref: 411e8a1cdb3f4c2812d83f28c335d2a4eb18bd29 # monero_c hash
       path: impls/monero.dart
+  bip39: ^1.0.6
+  bip32: ^2.0.0
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
