--- a/assets/ethereum_server_list.yml
+++ b/assets/ethereum_server_list.yml
@@ -5,12 +5,16 @@
   isEnabledForAutoSwitching: true
 -
   uri: eth.llamarpc.com
+  useSSL: true
 -
   uri: rpc.flashbots.net
+  useSSL: true
 -
   uri: eth-mainnet.public.blastapi.io
+  useSSL: true
 -
   uri: eth.nownodes.io
+  useSSL: true
   isEnabledForAutoSwitching: true
 -
   uri: ethereum.publicnode.com
