--- a/assets/polygon_node_list.yml
+++ b/assets/polygon_node_list.yml
@@ -7,6 +7,8 @@
   isEnabledForAutoSwitching: true
 -
   uri: polygon.llamarpc.com
+  useSSL: true
 -
   uri: matic.nownodes.io
+  useSSL: true
   isEnabledForAutoSwitching: true
