Add new main actions navbar

--- a/pubspec_base.yaml
+++ b/pubspec_base.yaml
@@ -221,6 +221,7 @@ flutter:
     - assets/images/hardware_wallet/
     - assets/images/crypto/
     - assets/images/stocks/
+    - assets/images/main_actions/
     - assets/node_list.yml
     - assets/haven_node_list.yml
     - assets/bitcoin_electrum_server_list.yml
