--- a/cw_core/pubspec.yaml
+++ b/cw_core/pubspec.yaml
@@ -2,11 +2,10 @@ name: cw_core
 description: A new Flutter package project.
 version: 0.0.1
 publish_to: none
-author: Cake Wallet
 homepage: https://cakewallet.com
 
 environment:
-  sdk: ">=2.17.5 <3.0.0"
+  sdk: '>=3.0.6 <4.0.0'
   flutter: ">=1.20.0"
 
 dependencies:
