decred: Add passphrase to restore from mnemonic.

--- a/cw_decred/pubspec.yaml
+++ b/cw_decred/pubspec.yaml
@@ -18,6 +18,11 @@ dependencies:
   cw_core:
     path: ../cw_core
 
+  mobx: any
+  ffi: any
+  path: any
+  hive: any
+  intl: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
