add evm switcher icons to pubspec_base

--- a/pubspec_base.yaml
+++ b/pubspec_base.yaml
@@ -217,6 +217,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/images/evm_switcher_icons/
     - assets/images/flags/
     - assets/images/hardware_wallet/
     - assets/images/crypto/
