--- a/cw_mweb/pubspec.yaml
+++ b/cw_mweb/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   path_provider: ^2.1.2
   plugin_platform_interface: ^2.0.2
   ffi: ^2.1.0
+  protobuf: ^3.1.0
+  fixnum: ^1.1.1
 
 dev_dependencies:
   flutter_test:
