feat: unique card colors and icons for coins

--- a/pubspec_base.yaml
+++ b/pubspec_base.yaml
@@ -243,6 +243,7 @@ flutter:
     - assets/faq/
     - assets/animation/
     - assets/new-ui/
+    - assets/new-ui/balance_card_icons/
 
   fonts:
     - family: Lato
