--- a/pubspec_base.yaml
+++ b/pubspec_base.yaml
@@ -55,6 +55,7 @@ dependencies:
   get_it: ^7.2.0
   # connectivity: ^3.0.3
   connectivity_plus: ^6.1.3
+  modal_bottom_sheet: ^3.0.0
   keyboard_actions: ^4.0.1
   another_flushbar: ^1.12.29
   archive: ^4.0.3
