--- a/.github/workflows/pr_test_build_android.yml
+++ b/.github/workflows/pr_test_build_android.yml
@@ -2,6 +2,10 @@ name: Cake Wallet Android
 
 on: [pull_request, pull_request_target]
 
+defaults:
+  run:
+    shell: bash
+
 jobs:
   # PATH A: Internal PRs (Runs immediately)
   internal-build:
