--- a/.github/workflows/pr_test_build_android.yml
+++ b/.github/workflows/pr_test_build_android.yml
@@ -1,6 +1,8 @@
 name: Cake Wallet Android
 
-on: [pull_request, pull_request_target]
+on:
+  pull_request:
+  pull_request_target:
 
 defaults:
   run:
