--- a/.github/workflows/pr_test_build_android.yml
+++ b/.github/workflows/pr_test_build_android.yml
@@ -10,6 +10,24 @@ defaults:
     shell: bash
 
 jobs:
+  debug-context:
+    runs-on: ubuntu-latest
+    steps:
+      - name: "1. Diagnostic Dump"
+        env:
+          # This dumps the entire JSON payload so you can see exactly what GitHub sees
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
+
+      - name: "2. Check Condition Logic"
+        run: |
+          echo "Event Name: ${{ github.event_name }}"
+          echo "Repo Full Name: ${{ github.repository }}"
+          echo "Head Repo: ${{ github.event.pull_request.head.repo.full_name }}"
+          echo "Is Fork: ${{ github.event.pull_request.head.repo.fork }}"
+          echo "PR Number: ${{ github.event.number }}"
+          echo "Head SHA: ${{ github.event.pull_request.head.sha }}"
+    # --------------------------------
   # PATH A: Internal PRs (Triggered by standard 'pull_request')
   internal-build:
     if: |
