--- a/cw_monero/pubspec.yaml
+++ b/cw_monero/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
       path: impls/monero.dart
   mutex: ^3.1.0
   ledger_flutter_plus: ^1.4.1
+  dio: ^5.9.0
 
 dev_dependencies:
   flutter_test:
