--- a/cw_monerolws/pubspec.yaml
+++ b/cw_monerolws/pubspec.yaml
@@ -35,6 +35,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.15
+  build_resolvers: ^2.4.4
+  mobx_codegen: ^2.0.7
+  mockito: ^5.4.5
+  hive_generator: ^2.0.1
+  sqflite_common_ffi: ^2.3.4+4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
