feat(minotari): Add Minotari wallet integration with stubbed FFI implementation
- Introduced Minotari wallet support in the application.
- Added Minotari-specific classes and services including MinotariWallet, MinotariWalletService, and MinotariTransactionInfo.
- Implemented stubbed FFI methods for wallet creation, restoration, and balance retrieval.
- Updated various view models and services to accommodate Minotari wallet type.
- Added Minotari icons and images for UI representation.
- Enhanced error handling for wallet operations and added necessary checks for Minotari wallet type.
- Updated pubspec.yaml to remove Flutter plugin configuration for FFI until implementation is complete.

--- a/cw_minotari/pubspec.yaml
+++ b/cw_minotari/pubspec.yaml
@@ -32,16 +32,5 @@ ffigen:
     entry-points:
       - 'rust/target/minotari_wallet.h'
 
-flutter:
-  plugin:
-    platforms:
-      android:
-        ffiPlugin: true
-      ios:
-        ffiPlugin: true
-      linux:
-        ffiPlugin: true
-      macos:
-        ffiPlugin: true
-      windows:
-        ffiPlugin: true
+# Flutter plugin configuration removed - will be added back when implementing real FFI
+# Currently using stub implementation without native code
