feat: integrate Lightning transaction support and improve transaction history UX
- Enhanced dashboard to compute confirmations using the first and last transactions.
- Updated `BitcoinWallet` to subscribe for and manage Lightning transactions.
- Improved `HistoryTile` layout and introduced new leading icons for Lightning transactions.

--- a/pubspec_base.yaml
+++ b/pubspec_base.yaml
@@ -251,6 +251,7 @@ flutter:
     - assets/new-ui/balance_card_icons/
     - assets/new-ui/balance_card_backgrounds/
     - assets/new-ui/settings_row_icons/
+    - assets/new-ui/chain_badges/
 
   fonts:
     - family: Lato
