--- a/cw_monerolws/pubspec.yaml
+++ b/cw_monerolws/pubspec.yaml
@@ -22,11 +22,11 @@ dependencies:
   polyseed: ^0.0.7
   cw_core:
     path: ../cw_core
-  cw_lws:
-    git:
-      url: https://github.com/karlbuys/monero_c
-      ref: 'dev'
-      path: impls/monero.dart
+  # monero:
+  #   git:
+  #     url: https://github.com/karlbuys/monero_c
+  #     ref: 'dev'
+  #     path: impls/monero.dart
   mutex: ^3.1.0
   ledger_flutter_plus: ^1.4.1
 
