--- a/cw_minotari/pubspec.yaml
+++ b/cw_minotari/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   cw_core:
     path: ../cw_core
   hive: ^2.2.3
+  flutter_rust_bridge: 2.11.1
+  freezed: ^2.5.2
+  freezed_annotation: ^2.4.4
 
 dev_dependencies:
   flutter_test:
@@ -25,6 +28,8 @@ dev_dependencies:
   build_runner: ^2.4.13
   mobx_codegen: ^2.6.1
   hive_generator: ^2.0.1
+  freezed: ^2.5.2
+  freezed_annotation: ^2.4.4
 
 ffigen:
   output: 'lib/minotari_ffi_bindings.dart'
