wip receive page changes

--- a/pubspec_base.yaml
+++ b/pubspec_base.yaml
@@ -252,6 +252,7 @@ flutter:
     - assets/new-ui/balance_card_backgrounds/
     - assets/new-ui/settings_row_icons/
     - assets/new-ui/chain_badges/
+    - assets/new-ui/address-type-picker-icons/
 
   fonts:
     - family: Lato
@@ -270,6 +271,44 @@ flutter:
           weight: 600
         - asset: assets/fonts/WixMadeforText-Bold.ttf
           weight: 700
+
+    - family: IBM Plex Mono
+      fonts:
+        - asset: assets/fonts/IBM_Plex_Mono/IBMPlexMono-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/IBM_Plex_Mono/IBMPlexMono-ThinItalic.ttf
+          weight: 100
+          style: italic
+        - asset: assets/fonts/IBM_Plex_Mono/IBMPlexMono-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/IBM_Plex_Mono/IBMPlexMono-ExtraLightItalic.ttf
+          weight: 200
+          style: italic
+        - asset: assets/fonts/IBM_Plex_Mono/IBMPlexMono-Light.ttf
+          weight: 300
+        - asset: assets/fonts/IBM_Plex_Mono/IBMPlexMono-LightItalic.ttf
+          weight: 300
+          style: italic
+        - asset: assets/fonts/IBM_Plex_Mono/IBMPlexMono-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/IBM_Plex_Mono/IBMPlexMono-Italic.ttf
+          weight: 400
+          style: italic
+        - asset: assets/fonts/IBM_Plex_Mono/IBMPlexMono-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/IBM_Plex_Mono/IBMPlexMono-MediumItalic.ttf
+          weight: 500
+          style: italic
+        - asset: assets/fonts/IBM_Plex_Mono/IBMPlexMono-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/IBM_Plex_Mono/IBMPlexMono-SemiBoldItalic.ttf
+          weight: 600
+          style: italic
+        - asset: assets/fonts/IBM_Plex_Mono/IBMPlexMono-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/IBM_Plex_Mono/IBMPlexMono-BoldItalic.ttf
+          weight: 700
+          style: italic
 
 msix_config:
   display_name: Cake Wallet
